Fix modal display on mobile with 50% top

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -211,7 +211,7 @@ select {
 
 .ebook-modal-wrapper {
   position: fixed;
-  top: 40%;
+  top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 1010;
